--- a/README.Rmd
+++ b/README.Rmd
@@ -228,7 +228,7 @@ All stdlib modules are loaded automatically. Key areas include:
 - **Macros**: `gensym`, `macroexpand`, `eval`
 - **Predicates**: `null?`, `list?`, `number?`, `string?`, `fn?`, and more
 
-For the complete function reference, see the [Standard Library Reference](articles/stdlib-reference.html).
+For the complete function reference, see the [Standard Library Reference](articles/lang-reference.html).
 
 The stdlib is organized into modules under `inst/arl/`. You can import them
 individually in your own modules or when working with a bare engine
