--- a/vignettes/tail-call-optimization.Rmd
+++ b/vignettes/tail-call-optimization.Rmd
@@ -38,7 +38,9 @@ that self-recurse are automatically optimized too.
       acc
       (factorial (- n 1) (* acc n)))))
 
-(factorial 100000 1)   ; no stack overflow
+;; No stack overflow (but 100000! is too large
+;; to be representable and overflows to Inf)
+(factorial 100000 1)
 ```
 
 ```{arl, include=FALSE}
@@ -67,14 +69,22 @@ Temporary variables (`.__tco_n`, `.__tco_acc`) ensure all new argument values
 are computed before any parameter is reassigned — just like a
 simultaneous `let`.
 
+Unlike in Scheme, more advanced types of tail recursion are **not** optimized:
+- **Mutual recursion** (`f` calls `g` in tail position, `g` calls `f`).
+- **`apply`-based tail calls** or indirect calls through higher-order functions.
+- **Anonymous lambdas** which tail-recurse by use of a fixed-point combinator
+  (no name for the compiler to detect self-calls against).
+
 ## What Counts as Tail Position
 
-The compiler recognizes self-calls in tail position through these forms:
+The compiler recognizes self-calls in tail position through these special
+forms:
 
 - **`if`** — both the consequent and alternative branches
 - **`begin`** — the last expression
-- **`cond`** — the last expression in each clause
-- **`let` / `let*` / `letrec`** — the body
+
+This covers many other expressions (`cond`, `let`, `let*`, `letrec`, etc.)
+which are implemented as macros in terms of `if` and `begin`.
 
 ```{arl}
 ;; All three self-calls below are in tail position
@@ -140,12 +150,11 @@ self-call to force normal recursion:
 
 ## loop/recur
 
-For mutual recursion or explicit looping patterns where self-TCO does
-not apply, the `looping` module provides Clojure-style `loop`/`recur`:
+For mutual recursion or explicit looping patterns where self-TCO is not
+applicable, the `looping` module (imported by default with the rest of the
+standard library) provides Clojure-style `loop`/`recur`:
 
 ```{arl}
-(import looping)
-
 (define factorial
   (lambda (n)
     (loop ((i n) (acc 1))
@@ -167,7 +176,7 @@ self-TCO.
 
 | Feature | Self-TCO | loop/recur |
 |---------|----------|------------|
-| Activation | Automatic | Explicit `(import looping)` |
+| Activation | Automatic | Explicit `(import looping)` though imported by default |
 | Pattern | `(define name (lambda ...))` or `(set! name (lambda ...))` | `(loop ((var init) ...) body)` |
 | Scope | Self-recursion only | Any loop pattern |
 | Stack growth | None | None |
